# csi-avro-utils

./: CMakeLists.txt  README.md
csi_avro_utils/: CMakeLists.txt  avro_fingerprint_encoding.h  avro_raw_encoding.h  avro_schema_id_encoding.h  confluent_codec.cpp  confluent_codec.h  confluent_schema_registry.cpp  confluent_schema_registry.h  hive_schema.cpp  hive_schema.h  utils.cpp  utils.h
programs/: CMakeLists.txt
programs/avro_normalize_schema/: avro_normalize_schema.cpp
programs/csi_avrogencpp/: csi_avrogencpp.cc
tests/schema-hash/: test-schema-hash.cpp
